# backend_go/src/api/v1/schemas/ember_schema.go
@@ -15,3 +15,23 @@ type EmberNotifies struct {
 	Meta   EmberMeta       `json:"meta"`
 	Notify []models.Notify `json:"notify"`
 }
+
+type EmberSessions struct {
+	Meta    EmberMeta        `json:"meta"`
+	Session []models.Session `json:"session"`
+}
+
+type EmberUser struct {
+	Meta    EmberMeta   `json:"meta"`
+	Session models.User `json:"user"`
+}
+
+type EmberSystems struct {
+	Meta    EmberMeta       `json:"meta"`
+	Session []models.System `json:"system"`
+}
+
+type EmberAcceptors struct {
+	Meta    EmberMeta         `json:"meta"`
+	Session []models.Acceptor `json:"acceptor"`
+}
